README.md creado. scrapings modificados.

--- a/notebooks/scraping/agents/0_define_topics_agents.ipynb
+++ b/notebooks/scraping/agents/0_define_topics_agents.ipynb
@@ -324,7 +324,7 @@
     "soup = BeautifulSoup(html_content, \"html.parser\")\n",
     "\n",
     "# Buscar el JSON dentro de la etiqueta <script>\n",
-    "script_tag = soup.find(\"script\", text=lambda t: t and \"window.__APOLLO_STATE__\" in t)\n",
+    "script_tag = soup.find(\"script\", string=lambda t: t and \"window.__APOLLO_STATE__\" in t)\n",
     "\n",
     "# Extraer el contenido JSON\n",
     "if script_tag:\n",
