--- a/notebooks/scraping/classic/0_define_topics_classic.ipynb
+++ b/notebooks/scraping/classic/0_define_topics_classic.ipynb
@@ -737,6 +737,36 @@
    "source": [
     "[[Volver]](#Contenido)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Fácil!\n",
+      "\n",
+      "La respuesta es: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "llm_client = OpenAI(base_url=\"http://localhost:11434/v1\",\n",
+    "                                      api_key=\"ollama\")\n",
+    "\n",
+    "resp = llm_client.chat.completions.create(messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"Eres un asistente cool\"},\n",
+    "        {\"role\": \"user\", \"content\": \"¿Cuánto es 2+2?\"}\n",
+    "    ],\n",
+    "    model=\"llama3.2:latest\")\n",
+    "\n",
+    "print(resp.choices[0].message.content)"
+   ]
   }
  ],
  "metadata": {
