--- a/notebooks/template/Plantilla.ipynb
+++ b/notebooks/template/Plantilla.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "<figure>\n",
-    "    <img src=\"./figures/logo_ap.png\"  width=\"80\" height=\"80\" align=\"left\"/>\n",
+    "    <img src=\"../../figures/logo_ap.png\"  width=\"80\" height=\"80\" align=\"left\"/>\n",
     "</figure>\n",
     "\n",
     "# <span style=\"color:blue\"><blue><br><br><br><br><center>&nbsp;&nbsp;&nbsp;Aprendizaje Profundo</center></span>"
