creacion de agentes principales y MVP en streamlit

--- a/notebooks/scraping/classic/1_scraping_sources_classic.ipynb
+++ b/notebooks/scraping/classic/1_scraping_sources_classic.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -296,63 +296,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>198041</td>\n",
+       "      <td>173901</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.SE</td>\n",
-       "      <td>2024-11-29 16:09:43+00:00</td>\n",
-       "      <td>2024-11-29 16:09:43+00:00</td>\n",
-       "      <td>Advanced System Integration: Analyzing OpenAPI...</td>\n",
-       "      <td>Integrating multiple (sub-)systems is essent...</td>\n",
-       "      <td>[Robin D. Pesl, Jerin G. Mathew, Massimo Mecel...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.19804v1</td>\n",
+       "      <td>cs.CL</td>\n",
+       "      <td>2025-02-24 18:16:10+00:00</td>\n",
+       "      <td>2025-02-24 18:16:10+00:00</td>\n",
+       "      <td>Mitigating Bias in RAG: Controlling the Embedder</td>\n",
+       "      <td>In retrieval augmented generation (RAG) syst...</td>\n",
+       "      <td>[Taeyoun Kim, Jacob Springer, Aditi Raghunatha...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.17390v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>197131</td>\n",
+       "      <td>172971</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.NE</td>\n",
-       "      <td>2024-11-29 14:01:34+00:00</td>\n",
-       "      <td>2024-11-29 14:01:34+00:00</td>\n",
-       "      <td>CantorNet: A Sandbox for Testing Topological a...</td>\n",
-       "      <td>Many natural phenomena are characterized by ...</td>\n",
-       "      <td>[Michal Lewandowski, Hamid Eghbalzadeh, Bernha...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.19713v1</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>2025-02-24 16:25:25+00:00</td>\n",
+       "      <td>2025-02-24 16:25:25+00:00</td>\n",
+       "      <td>Benchmarking Retrieval-Augmented Generation in...</td>\n",
+       "      <td>This paper introduces Multi-Modal Retrieval-...</td>\n",
+       "      <td>[Zhenghao Liu, Xingsheng Zhu, Tianshuo Zhou, X...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.17297v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>197101</td>\n",
+       "      <td>171631</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.IR</td>\n",
-       "      <td>2024-11-29 13:57:07+00:00</td>\n",
-       "      <td>2024-11-29 13:57:07+00:00</td>\n",
-       "      <td>Know Your RAG: Dataset Taxonomy and Generation...</td>\n",
-       "      <td>Retrieval Augmented Generation (RAG) systems...</td>\n",
-       "      <td>[Rafael Teixeira de Lima, Shubham Gupta, Cesar...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.19710v1</td>\n",
+       "      <td>cs.CL</td>\n",
+       "      <td>2025-02-24 13:58:42+00:00</td>\n",
+       "      <td>2025-02-24 13:58:42+00:00</td>\n",
+       "      <td>MEMERAG: A Multilingual End-to-End Meta-Evalua...</td>\n",
+       "      <td>Automatic evaluation of retrieval augmented ...</td>\n",
+       "      <td>[María Andrea Cruz Blandón, Jayasimha Talur, B...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.17163v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>195541</td>\n",
+       "      <td>171251</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.HC</td>\n",
-       "      <td>2024-11-29 09:07:21+00:00</td>\n",
-       "      <td>2024-11-29 09:07:21+00:00</td>\n",
-       "      <td>Unimib Assistant: designing a student-friendly...</td>\n",
-       "      <td>Natural language processing skills of Large ...</td>\n",
-       "      <td>[Chiara Antico, Stefano Giordano, Cansu Koyutu...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.19554v1</td>\n",
+       "      <td>cs.CL</td>\n",
+       "      <td>2025-02-24 13:11:47+00:00</td>\n",
+       "      <td>2025-02-24 13:11:47+00:00</td>\n",
+       "      <td>LettuceDetect: A Hallucination Detection Frame...</td>\n",
+       "      <td>Retrieval Augmented Generation (RAG) systems...</td>\n",
+       "      <td>[Ádám Kovács, Gábor Recski]</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.17125v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>195391</td>\n",
+       "      <td>170361</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.AI</td>\n",
-       "      <td>2024-11-29 08:34:07+00:00</td>\n",
-       "      <td>2024-11-29 08:34:07+00:00</td>\n",
-       "      <td>Knowledge Management for Automobile Failure An...</td>\n",
-       "      <td>This paper presents a knowledge management s...</td>\n",
-       "      <td>[Yuta Ojima, Hiroki Sakaji, Tadashi Nakamura, ...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.19539v1</td>\n",
+       "      <td>cs.CL</td>\n",
+       "      <td>2025-02-24 10:37:13+00:00</td>\n",
+       "      <td>2025-02-24 10:37:13+00:00</td>\n",
+       "      <td>Language Model Re-rankers are Steered by Lexic...</td>\n",
+       "      <td>Language model (LM) re-rankers are used to r...</td>\n",
+       "      <td>[Lovisa Hagström, Ercong Nie, Ruben Halifa, He...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.17036v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -368,63 +368,63 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>29591</td>\n",
+       "      <td>90171</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.IR</td>\n",
-       "      <td>2024-11-05 09:58:36+00:00</td>\n",
-       "      <td>2024-11-05 09:58:36+00:00</td>\n",
-       "      <td>HtmlRAG: HTML is Better Than Plain Text for Mo...</td>\n",
-       "      <td>Retrieval-Augmented Generation (RAG) has bee...</td>\n",
-       "      <td>[Jiejun Tan, Zhicheng Dou, Wen Wang, Mang Wang...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.02959v1</td>\n",
+       "      <td>cs.CL</td>\n",
+       "      <td>2025-02-13 07:11:01+00:00</td>\n",
+       "      <td>2025-02-13 07:11:01+00:00</td>\n",
+       "      <td>Diversity Enhances an LLM's Performance in RAG...</td>\n",
+       "      <td>The rapid advancements in large language mod...</td>\n",
+       "      <td>[Zhchao Wang, Bin Bi, Yanqi Luo, Sitaram Asur,...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.09017v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>28501</td>\n",
-       "      <td>1</td>\n",
-       "      <td>cs.CY</td>\n",
-       "      <td>2024-11-05 06:44:15+00:00</td>\n",
-       "      <td>2024-11-05 06:44:15+00:00</td>\n",
-       "      <td>WASHtsApp -- A RAG-powered WhatsApp Chatbot fo...</td>\n",
-       "      <td>This paper introduces WASHtsApp, a WhatsApp-...</td>\n",
-       "      <td>[Simon Kloker, Alex Cedric Luyima, Matthew Baz...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.02850v1</td>\n",
+       "      <td>88262</td>\n",
+       "      <td>2</td>\n",
+       "      <td>cs.CL</td>\n",
+       "      <td>2025-02-12 22:33:41+00:00</td>\n",
+       "      <td>2025-02-17 23:26:44+00:00</td>\n",
+       "      <td>Ask in Any Modality: A Comprehensive Survey on...</td>\n",
+       "      <td>Large Language Models (LLMs) struggle with h...</td>\n",
+       "      <td>[Mohammad Mahdi Abootorabi, Amirhosein Zobeiri...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.08826v2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>28322</td>\n",
-       "      <td>2</td>\n",
-       "      <td>cs.CL</td>\n",
-       "      <td>2024-11-05 06:11:17+00:00</td>\n",
-       "      <td>2024-11-06 11:19:42+00:00</td>\n",
-       "      <td>PersianRAG: A Retrieval-Augmented Generation S...</td>\n",
-       "      <td>Retrieval augmented generation (RAG) models,...</td>\n",
-       "      <td>[Hossein Hosseini, Mohammad Sobhan Zare, Amir ...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.02832v2</td>\n",
+       "      <td>87561</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>2025-02-12 19:59:57+00:00</td>\n",
+       "      <td>2025-02-12 19:59:57+00:00</td>\n",
+       "      <td>From PowerPoint UI Sketches to Web-Based Appli...</td>\n",
+       "      <td>Developing web-based GIS applications, commo...</td>\n",
+       "      <td>[Haowen Xu, Xiao-Ying Yu]</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.08756v1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>26571</td>\n",
-       "      <td>1</td>\n",
+       "      <td>83562</td>\n",
+       "      <td>2</td>\n",
        "      <td>cs.CL</td>\n",
-       "      <td>2024-11-04 22:45:52+00:00</td>\n",
-       "      <td>2024-11-04 22:45:52+00:00</td>\n",
-       "      <td>Zebra-Llama: A Context-Aware Large Language Mo...</td>\n",
-       "      <td>Rare diseases present unique challenges in h...</td>\n",
-       "      <td>[Karthik Soman, Andrew Langdon, Catalina Villo...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.02657v1</td>\n",
+       "      <td>2025-02-12 12:39:51+00:00</td>\n",
+       "      <td>2025-02-17 14:29:48+00:00</td>\n",
+       "      <td>Systematic Knowledge Injection into Large Lang...</td>\n",
+       "      <td>Retrieval-Augmented Generation (RAG) has eme...</td>\n",
+       "      <td>[Kushagra Bhushan, Yatin Nandwani, Dinesh Khan...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.08356v2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>26171</td>\n",
+       "      <td>82541</td>\n",
        "      <td>1</td>\n",
-       "      <td>cs.CL</td>\n",
-       "      <td>2024-11-04 21:12:08+00:00</td>\n",
-       "      <td>2024-11-04 21:12:08+00:00</td>\n",
-       "      <td>TeleOracle: Fine-Tuned Retrieval-Augmented Gen...</td>\n",
-       "      <td>The telecommunications industry's rapid evol...</td>\n",
-       "      <td>[Nouf Alabbasi, Omar Erak, Omar Alhussein, Ism...</td>\n",
-       "      <td>http://arxiv.org/pdf/2411.02617v1</td>\n",
+       "      <td>cs.CV</td>\n",
+       "      <td>2025-02-12 09:49:43+00:00</td>\n",
+       "      <td>2025-02-12 09:49:43+00:00</td>\n",
+       "      <td>UniCoRN: Unified Commented Retrieval Network w...</td>\n",
+       "      <td>Multimodal retrieval methods have limitation...</td>\n",
+       "      <td>[Maximilian Jaritz, Matthieu Guillaumin, Sabin...</td>\n",
+       "      <td>http://arxiv.org/pdf/2502.08254v1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -433,82 +433,82 @@
       ],
       "text/plain": [
        "        id version primary_category                 published  \\\n",
-       "0   198041       1            cs.SE 2024-11-29 16:09:43+00:00   \n",
-       "1   197131       1            cs.NE 2024-11-29 14:01:34+00:00   \n",
-       "2   197101       1            cs.IR 2024-11-29 13:57:07+00:00   \n",
-       "3   195541       1            cs.HC 2024-11-29 09:07:21+00:00   \n",
-       "4   195391       1            cs.AI 2024-11-29 08:34:07+00:00   \n",
+       "0   173901       1            cs.CL 2025-02-24 18:16:10+00:00   \n",
+       "1   172971       1            cs.AI 2025-02-24 16:25:25+00:00   \n",
+       "2   171631       1            cs.CL 2025-02-24 13:58:42+00:00   \n",
+       "3   171251       1            cs.CL 2025-02-24 13:11:47+00:00   \n",
+       "4   170361       1            cs.CL 2025-02-24 10:37:13+00:00   \n",
        "..     ...     ...              ...                       ...   \n",
-       "95   29591       1            cs.IR 2024-11-05 09:58:36+00:00   \n",
-       "96   28501       1            cs.CY 2024-11-05 06:44:15+00:00   \n",
-       "97   28322       2            cs.CL 2024-11-05 06:11:17+00:00   \n",
-       "98   26571       1            cs.CL 2024-11-04 22:45:52+00:00   \n",
-       "99   26171       1            cs.CL 2024-11-04 21:12:08+00:00   \n",
+       "95   90171       1            cs.CL 2025-02-13 07:11:01+00:00   \n",
+       "96   88262       2            cs.CL 2025-02-12 22:33:41+00:00   \n",
+       "97   87561       1            cs.AI 2025-02-12 19:59:57+00:00   \n",
+       "98   83562       2            cs.CL 2025-02-12 12:39:51+00:00   \n",
+       "99   82541       1            cs.CV 2025-02-12 09:49:43+00:00   \n",
        "\n",
        "                     updated  \\\n",
-       "0  2024-11-29 16:09:43+00:00   \n",
-       "1  2024-11-29 14:01:34+00:00   \n",
-       "2  2024-11-29 13:57:07+00:00   \n",
-       "3  2024-11-29 09:07:21+00:00   \n",
-       "4  2024-11-29 08:34:07+00:00   \n",
+       "0  2025-02-24 18:16:10+00:00   \n",
+       "1  2025-02-24 16:25:25+00:00   \n",
+       "2  2025-02-24 13:58:42+00:00   \n",
+       "3  2025-02-24 13:11:47+00:00   \n",
+       "4  2025-02-24 10:37:13+00:00   \n",
        "..                       ...   \n",
-       "95 2024-11-05 09:58:36+00:00   \n",
-       "96 2024-11-05 06:44:15+00:00   \n",
-       "97 2024-11-06 11:19:42+00:00   \n",
-       "98 2024-11-04 22:45:52+00:00   \n",
-       "99 2024-11-04 21:12:08+00:00   \n",
+       "95 2025-02-13 07:11:01+00:00   \n",
+       "96 2025-02-17 23:26:44+00:00   \n",
+       "97 2025-02-12 19:59:57+00:00   \n",
+       "98 2025-02-17 14:29:48+00:00   \n",
+       "99 2025-02-12 09:49:43+00:00   \n",
        "\n",
        "                                                title  \\\n",
-       "0   Advanced System Integration: Analyzing OpenAPI...   \n",
-       "1   CantorNet: A Sandbox for Testing Topological a...   \n",
-       "2   Know Your RAG: Dataset Taxonomy and Generation...   \n",
-       "3   Unimib Assistant: designing a student-friendly...   \n",
-       "4   Knowledge Management for Automobile Failure An...   \n",
+       "0    Mitigating Bias in RAG: Controlling the Embedder   \n",
+       "1   Benchmarking Retrieval-Augmented Generation in...   \n",
+       "2   MEMERAG: A Multilingual End-to-End Meta-Evalua...   \n",
+       "3   LettuceDetect: A Hallucination Detection Frame...   \n",
+       "4   Language Model Re-rankers are Steered by Lexic...   \n",
        "..                                                ...   \n",
-       "95  HtmlRAG: HTML is Better Than Plain Text for Mo...   \n",
-       "96  WASHtsApp -- A RAG-powered WhatsApp Chatbot fo...   \n",
-       "97  PersianRAG: A Retrieval-Augmented Generation S...   \n",
-       "98  Zebra-Llama: A Context-Aware Large Language Mo...   \n",
-       "99  TeleOracle: Fine-Tuned Retrieval-Augmented Gen...   \n",
+       "95  Diversity Enhances an LLM's Performance in RAG...   \n",
+       "96  Ask in Any Modality: A Comprehensive Survey on...   \n",
+       "97  From PowerPoint UI Sketches to Web-Based Appli...   \n",
+       "98  Systematic Knowledge Injection into Large Lang...   \n",
+       "99  UniCoRN: Unified Commented Retrieval Network w...   \n",
        "\n",
        "                                              summary  \\\n",
-       "0     Integrating multiple (sub-)systems is essent...   \n",
-       "1     Many natural phenomena are characterized by ...   \n",
-       "2     Retrieval Augmented Generation (RAG) systems...   \n",
-       "3     Natural language processing skills of Large ...   \n",
-       "4     This paper presents a knowledge management s...   \n",
+       "0     In retrieval augmented generation (RAG) syst...   \n",
+       "1     This paper introduces Multi-Modal Retrieval-...   \n",
+       "2     Automatic evaluation of retrieval augmented ...   \n",
+       "3     Retrieval Augmented Generation (RAG) systems...   \n",
+       "4     Language model (LM) re-rankers are used to r...   \n",
        "..                                                ...   \n",
-       "95    Retrieval-Augmented Generation (RAG) has bee...   \n",
-       "96    This paper introduces WASHtsApp, a WhatsApp-...   \n",
-       "97    Retrieval augmented generation (RAG) models,...   \n",
-       "98    Rare diseases present unique challenges in h...   \n",
-       "99    The telecommunications industry's rapid evol...   \n",
+       "95    The rapid advancements in large language mod...   \n",
+       "96    Large Language Models (LLMs) struggle with h...   \n",
+       "97    Developing web-based GIS applications, commo...   \n",
+       "98    Retrieval-Augmented Generation (RAG) has eme...   \n",
+       "99    Multimodal retrieval methods have limitation...   \n",
        "\n",
        "                                              authors  \\\n",
-       "0   [Robin D. Pesl, Jerin G. Mathew, Massimo Mecel...   \n",
-       "1   [Michal Lewandowski, Hamid Eghbalzadeh, Bernha...   \n",
-       "2   [Rafael Teixeira de Lima, Shubham Gupta, Cesar...   \n",
-       "3   [Chiara Antico, Stefano Giordano, Cansu Koyutu...   \n",
-       "4   [Yuta Ojima, Hiroki Sakaji, Tadashi Nakamura, ...   \n",
+       "0   [Taeyoun Kim, Jacob Springer, Aditi Raghunatha...   \n",
+       "1   [Zhenghao Liu, Xingsheng Zhu, Tianshuo Zhou, X...   \n",
+       "2   [María Andrea Cruz Blandón, Jayasimha Talur, B...   \n",
+       "3                         [Ádám Kovács, Gábor Recski]   \n",
+       "4   [Lovisa Hagström, Ercong Nie, Ruben Halifa, He...   \n",
        "..                                                ...   \n",
-       "95  [Jiejun Tan, Zhicheng Dou, Wen Wang, Mang Wang...   \n",
-       "96  [Simon Kloker, Alex Cedric Luyima, Matthew Baz...   \n",
-       "97  [Hossein Hosseini, Mohammad Sobhan Zare, Amir ...   \n",
-       "98  [Karthik Soman, Andrew Langdon, Catalina Villo...   \n",
-       "99  [Nouf Alabbasi, Omar Erak, Omar Alhussein, Ism...   \n",
+       "95  [Zhchao Wang, Bin Bi, Yanqi Luo, Sitaram Asur,...   \n",
+       "96  [Mohammad Mahdi Abootorabi, Amirhosein Zobeiri...   \n",
+       "97                          [Haowen Xu, Xiao-Ying Yu]   \n",
+       "98  [Kushagra Bhushan, Yatin Nandwani, Dinesh Khan...   \n",
+       "99  [Maximilian Jaritz, Matthieu Guillaumin, Sabin...   \n",
        "\n",
        "                         link_article  \n",
-       "0   http://arxiv.org/pdf/2411.19804v1  \n",
-       "1   http://arxiv.org/pdf/2411.19713v1  \n",
-       "2   http://arxiv.org/pdf/2411.19710v1  \n",
-       "3   http://arxiv.org/pdf/2411.19554v1  \n",
-       "4   http://arxiv.org/pdf/2411.19539v1  \n",
+       "0   http://arxiv.org/pdf/2502.17390v1  \n",
+       "1   http://arxiv.org/pdf/2502.17297v1  \n",
+       "2   http://arxiv.org/pdf/2502.17163v1  \n",
+       "3   http://arxiv.org/pdf/2502.17125v1  \n",
+       "4   http://arxiv.org/pdf/2502.17036v1  \n",
        "..                                ...  \n",
-       "95  http://arxiv.org/pdf/2411.02959v1  \n",
-       "96  http://arxiv.org/pdf/2411.02850v1  \n",
-       "97  http://arxiv.org/pdf/2411.02832v2  \n",
-       "98  http://arxiv.org/pdf/2411.02657v1  \n",
-       "99  http://arxiv.org/pdf/2411.02617v1  \n",
+       "95  http://arxiv.org/pdf/2502.09017v1  \n",
+       "96  http://arxiv.org/pdf/2502.08826v2  \n",
+       "97  http://arxiv.org/pdf/2502.08756v1  \n",
+       "98  http://arxiv.org/pdf/2502.08356v2  \n",
+       "99  http://arxiv.org/pdf/2502.08254v1  \n",
        "\n",
        "[100 rows x 9 columns]"
       ]
@@ -656,7 +656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "alejandria",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -674,5 +674,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
