--- a/notebooks/scraping/agents/0_define_topics_agents.ipynb
+++ b/notebooks/scraping/agents/0_define_topics_agents.ipynb
@@ -616,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "alejandria",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -634,5 +634,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
