--- a/notebooks/scraping/classic/0_define_topics_classic.ipynb
+++ b/notebooks/scraping/classic/0_define_topics_classic.ipynb
@@ -771,7 +771,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "alejandria",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -789,5 +789,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
